# coralDjango

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  manage.py  parameters.xml  pyproject.toml  requirements.txt
currant/: apps.py  collapsing.py  models.py  serializers.py  tasks.py  tests.py  utility.py  view_sets.py
currant/migrations/: 0001_initial.py  0002_file_columns.py  0003_file_children_file_root_inputparameter.py  0004_operation_operationsequence_remove_file_children_and_more.py  0005_alter_operation_sequence.py  0006_file_file_type.py  0007_operation_operation_type.py  0008_operation_order.py  0009_operation_job_finished_operation_job_id.py  0010_alter_operation_sequence_coral_file_coral_and_more.py  0011_operation_job_error_operation_job_error_status_and_more.py  0012_userextradata_alter_operation_operation_type.py  0013_userextradata_user.py
currantDjango/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
media/currant/files/: 371680d8-e0d5-42ec-95c8-cde3913eb4ed.txt  3e17c2fe-b6c1-4b53-a38c-f0bdafb483a0.txt  d55920ba-b0fc-4762-8b60-d39f597772a9.txt  ed6b4223-db3e-4703-993f-4d3839711b2f.txt
